--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,6 +8,10 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="14" />
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name="com.niyang.googlemarket.global.GooglePlayApplicaction"
         android:allowBackup="true"
